fix: letter spacing in title class

--- a/src/theme/fonts.scss
+++ b/src/theme/fonts.scss
@@ -6,7 +6,6 @@ h1,h2,h3,h4,p,span,button,ul,li,input{
 .title{
     font-size: 3rem;
     font-weight: bold;
-    letter-spacing: 0.07em;
     line-height: 58.51px;
     color:$white;
     margin:0;
